--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -72,7 +72,7 @@ jobs:
       #   make bootstrap
       #   make release
       - name: Build with Maven
-        run: mvn -B clean install --settings=.mvn.settings.xml --file pom.xml
+        run: mvn -B clean install
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
