--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>Regular expression project for Spring Boot</description>
     <properties>
         <java.version>14</java.version>
+        <sonar.projectKey>RickHeadle_RegEx</sonar.projectKey>
+        <sonar.organization>rickheadle-github</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
