--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,12 @@
             <version>2.0.2-beta</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.12.10</version>
+        </dependency>
     </dependencies>
 
     <build>
