--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: '@profile.name@'
   datasource:
-    driver-class-name: org.h2.Driver
+    driverClassName: org.h2.Driver
     url: jdbc:h2:mem:db;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: password
